--- a/style.css
+++ b/style.css
@@ -101,6 +101,12 @@ margin-bottom: auto;
 margin-bottom: 100px;
 left: 70px;
 }
+.container1{
+    background-color:rgb(3, 85, 85);
+    background: rgb(63, 27, 27);
+    border: 2px solid rgb(73, 50, 6);
+    border-radius: 10px;
+}
 .button1{
     width: 20px;
     height: 50px;
